# speed-monitor

./: .editorconfig  .gitignore  .gitpod.yml  Cargo.toml  Cross.toml  Dockerfile  README.md
.github/workflows/: ci.yml
migrations/2021-07-10-130328_create-speed-table/: down.sql  up.sql
packing/terra-master/speedmonitor/: config.ini  speedmonitor.lang
packing/terra-master/speedmonitor/etc/init.d/: speedmonitor
packing/terra-master/speedmonitor/usr/www/mod/4.Application/: 100.speedmonitor.php
src/: db.rs  errors.rs  main.rs  models.rs  schema.rs  speed_engine.rs
static/: index.html
